南乔到家后端项目模块&集成minio实现文件存储

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <version>5.8.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
