--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -58,3 +58,17 @@ logging:
   level:
     com.whs.edws.mapper: debug
 
+minio:
+  # 访问的url
+  endpoint: http://123.60.210.106
+  # API的端口
+  port: 9000
+  # 秘钥
+  accessKey: NkgnDWEpoMG4EX06t0Om
+  secretKey: HNoa9TzHhITwAkoxUgoqmk9bwR6ATyr9mjbK4BRN
+  secure: false
+  bucket-name: nqdj # 桶名 我这是给出了一个默认桶名
+  image-size: 10485760 # 我在这里设定了 图片文件的最大大小
+  file-size: 1073741824 # 此处是设定了文件的最大大小
+
+
