--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -48,6 +48,9 @@ spring:
     username: edws
     password: 403126
     virtual-host: /test
+    listener:
+      simple:
+        acknowledge-mode: manual # 配置手动发送确认消息
 
 # mybatis相关配置
 mybatis:
