--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -51,6 +51,7 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual # 配置手动发送确认消息
+    publisher-confirm-type: correlated # 配置启用confirm机制
 
 # mybatis相关配置
 mybatis:
